--- a/hosting-filter/index.html
+++ b/hosting-filter/index.html
@@ -14,6 +14,8 @@
 	<script src="assets/libs/rzslider.min.js"></script>
 	<script src="assets/libs/select.js"></script>
 	<script src="assets/libs/ui-bootstrap-1.3.2.min.js"></script>
+	<script src="assets/libs/underscore.js"></script>
+	<script src="assets/libs/angular-underscore-module.js"></script>
 
 	<script src="app/app.module.js"></script>
 	<script src="app/app.routes.js"></script>
@@ -24,16 +26,23 @@
 </head>
 	<body ng-app="App">
 		<div class="container">
-			<div class="row">
-				<div class="col-lg-12">
-					<div class="logo-container">
-						<h1>
-							Choose <br>
-							Your <br>
-							Hosting
-						</h1>
+			<header>
+				<div class="row">
+					<div class="col-lg-7">
+						<div class="logo-container">
+							<h1>Choose Your Hosting</h1>
+						</div>
+					</div>
+
+					<div class="col-lg-5">
+						<ul class="pull-right">
+							<li><a target="_blank" href="https://github.com/TarikFojnica/choose-hosting"><i class="fa fa-github" aria-hidden="true"></i> Github</a></li>
+						</ul>
 					</div>
 				</div>
+			</header>
+
+			<div class="row">
 				<div ng-view></div>
 			</div>
 		</div>
