Update weather app

--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -23,6 +23,7 @@
 
 	<script src="app/app.module.js"></script>
 	<script src="app/app.routes.js"></script>
+	<script src="app/filters/uniqueFilter.js"></script>
 
 	<script src="app/controllers/forecastsController.js"></script>
 	<script src="app/services/forecastsService.js"></script>
@@ -59,6 +60,17 @@
 
 	<div ng-view></div>
 
+	<footer>
+		<nav>
+			<ul>
+				<li>
+					<a target="_blank" href="https://github.com/TarikFojnica/weather-app.git"><i class="fa fa-github"
+																																											 aria-hidden="true"></i>
+						Github</a>
+				</li>
+			</ul>
+		</nav>
+	</footer>
 </div>
 </body>
 </html>
