--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -32,13 +32,13 @@
 <div class="container" ng-controller="forecastsController">
 	<header>
 		<div class="row">
-			<div class="col-md-4">
+			<div class="col-md-4 col-lg-6">
 				<div class="logo">
 					<h1><img src="assets/img/sun.png" alt="">Weather</h1>
 				</div>
 			</div>
 
-			<div class="col-md-8">
+			<div class="col-md-8 col-lg-6">
 				<div class="form-container">
 					<form ng-submit="updateLocation(location.value)" required>
 						<div class="form-group">
