--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -15,7 +15,6 @@
 	<script src="assets/libs/angular.js"></script>
 	<script src="assets/libs/angular-route.js"></script>
 	<script src="assets/libs/angular-animate.min.js"></script>
-	<script src="assets/libs/select.js"></script>
 	<script src="assets/libs/ui-bootstrap-1.3.2.min.js"></script>
 	<script src="assets/libs/loading-bar.min.js"></script>
 
@@ -26,6 +25,7 @@
 
 	<script src="app/controllers/forecastsController.js"></script>
 	<script src="app/services/forecastsService.js"></script>
+	<script src="app/directives/search/searchDirective.js"></script>
 </head>
 
 <body ng-app="App">
@@ -39,37 +39,12 @@
 			</div>
 
 			<div class="col-md-8 col-lg-6">
-				<div class="form-container">
-					<form ng-submit="updateLocation(location.value)" required>
-						<div class="form-group">
-							<div class="col-sm-9">
-								<input required type="text" ng-model="location.value" class="form-control"
-											 placeholder="Change the place">
-							</div>
-
-							<div class="col-sm-3">
-								<button class="btn" type="submit">Submit</button>
-							</div>
-						</div>
-					</form>
-				</div>
+				<search></search>
 			</div>
 		</div>
 	</header>
 
 	<div ng-view></div>
-
-	<footer>
-		<nav>
-			<ul>
-				<li>
-					<a target="_blank" href="https://github.com/TarikFojnica/weather-app.git"><i class="fa fa-github"
-																																											 aria-hidden="true"></i>
-						Github</a>
-				</li>
-			</ul>
-		</nav>
-	</footer>
 </div>
 </body>
 </html>
