weather-app updated

--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -26,6 +26,7 @@
 	<script src="app/controllers/forecastsController.js"></script>
 	<script src="app/services/forecastsService.js"></script>
 	<script src="app/directives/search/searchDirective.js"></script>
+	<script src="app/helpers/conversions.js"></script>
 </head>
 
 <body ng-app="App">
