--- a/weather-app/app/directives/search/searchDirective.html
+++ b/weather-app/app/directives/search/searchDirective.html
@@ -3,7 +3,7 @@
 		<div class="form-group">
 			<div class="col-sm-9">
 				<input required type="text" ng-model="location.value" class="form-control"
-							 placeholder="Change the place">
+							 placeholder="Change the location">
 			</div>
 
 			<div class="col-sm-3">
