--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -12,12 +12,11 @@
 	<link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
 
-	<script src="assets/libs/angular.js"></script>
+	<script src="assets/libs/angular.min.js"></script>
 	<script src="assets/libs/angular-route.js"></script>
 	<script src="assets/libs/angular-animate.min.js"></script>
 	<script src="assets/libs/ui-bootstrap-1.3.2.min.js"></script>
 	<script src="assets/libs/loading-bar.min.js"></script>
-
 	<script src="assets/js/moment.min.js"></script>
 
 	<script src="app/app.module.js"></script>
@@ -35,7 +34,9 @@
 		<div class="row">
 			<div class="col-md-4 col-lg-6">
 				<div class="logo">
-					<h1><img src="assets/img/sun.png" alt="">Weather</h1>
+					<h1><img src="assets/img/sun.png" alt="">Weather
+						<span class="label"><a target="_blank" href="http://forecast.io/">Powered by Forecast</a></span>
+					</h1>
 				</div>
 			</div>
 
