--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -5,13 +5,31 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Weather Forecasts</title>
 
+	<!-- for Google -->
+	<meta name="description" content="Weather Forecasts"/>
+	<meta name="keywords" content="weather, forecasts"/>
+
+	<meta name="author" content="Tarik Fojnica"/>
+	<meta name="application-name" content="Weather Forecasts"/>
+
+	<!-- for Facebook -->
+	<meta property="og:title" content="Weather Forecasts"/>
+	<meta property="og:image" content="assets/img/preview.jpg"/>
+
+	<!-- for Twitter -->
+	<meta name="twitter:title" content="Weather Forecasts"/>
+	<meta property="og:image" content="assets/img/preview.jpg"/>
+
+	<!-- Favicon -->
 	<link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
 
+	<!-- Styles -->
 	<link rel="stylesheet" href="assets/styles/css/main.css">
 	<link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
 
+	<!-- Angular and Angular related libraries -->
 	<script src="assets/libs/angular.min.js"></script>
 	<script src="assets/libs/angular-route.js"></script>
 	<script src="assets/libs/angular-animate.min.js"></script>
@@ -19,6 +37,7 @@
 	<script src="assets/libs/loading-bar.min.js"></script>
 	<script src="assets/js/moment.min.js"></script>
 
+	<!-- Custom app data-->
 	<script src="app/app.module.js"></script>
 	<script src="app/app.routes.js"></script>
 
